--- a/lecture_08/worksheet_08.ipynb
+++ b/lecture_08/worksheet_08.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.046963866763451, 3.6686538810709175, 4.6257675042035284, 4.69827733116464, 3.986715939315543, 5.5034843752381395, 5.46514731746146, 5.3748488223134485, 8.23833798038552, 5.514625540521861]\n"
+      "[4.489000304558442, 3.1881990847673203, 3.677752580591954, 4.998275011684966, 6.574213367221136, 5.562121291796986, 5.134669295740058, 6.169851012541715, 5.1797142187059615, 4.010088277285393]\n"
      ]
     }
    ],
@@ -42,6 +42,7 @@
     "import random\n",
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
+    "\n",
     "\n",
     "mean = 5\n",
     "stdev = 1\n",
@@ -59,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9.237725959515625, 9.557478209878242, 7.87513091857493, 8.028614228985882, 7.843999081685762, 6.5545905128120205, 8.665296628787065, 8.160753902643318, 7.793926149525289, 8.676603969506575]\n"
+      "[7.680490809215315, 7.914944611336911, 6.87079372674043, 6.767963731651916, 8.357918266895211, 7.925396538543261, 8.040964332597055, 6.704784293518003, 9.865730196407435, 6.9274886079749]\n"
      ]
     }
    ],
@@ -84,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.514625540521861, 8.23833798038552, 8.676603969506575, 5.3748488223134485, 5.46514731746146, 7.793926149525289, 5.5034843752381395, 8.160753902643318, 3.986715939315543, 8.665296628787065]\n"
+      "[6.9274886079749, 4.010088277285393, 9.865730196407435, 6.704784293518003, 8.040964332597055, 7.925396538543261, 8.357918266895211, 6.767963731651916, 5.1797142187059615, 6.87079372674043]\n"
      ]
     }
    ],
@@ -138,18 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8.23833798038552, 8.676603969506575, 7.793926149525289, 8.160753902643318, 8.665296628787065]\n",
-      "[5.514625540521861, 5.3748488223134485, 5.46514731746146, 5.5034843752381395, 3.986715939315543]\n",
-      "P(C_1) = 0.5,  P(C_2) = 0.5\n",
-      "mean_1 = 8.306983726169554,  mean_2 = 5.16896439897009\n",
-      "var_1 = 0.11086614742431007,  var_2 = 0.3518418753276583\n"
+      "[4.010088277285393, 5.1797142187059615]\n",
+      "[6.9274886079749, 9.865730196407435, 6.704784293518003, 8.040964332597055, 7.925396538543261, 8.357918266895211, 6.767963731651916, 6.87079372674043]\n",
+      "P(C_1) = 0.2,  P(C_2) = 0.8\n",
+      "mean_1 = 4.5949012479956775,  mean_2 = 7.682629961791027\n",
+      "var_1 = 0.3420062107109875,  var_2 = 1.053924132722905\n"
      ]
     }
    ],
@@ -173,20 +174,92 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "e) For each data point, compute `P(C_j | X_i)`. Comment on which cluster you think each point belongs to based on the estimated probabilities. How does that compare to the truth?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point =  6.9274886079749\n",
+      "probability of observing that point if it came from cluster 0 =  9.245435263107942e-11\n",
+      "probability of observing that point if it came from cluster 1 =  0.2928343086814163\n",
+      "point =  4.010088277285393\n",
+      "probability of observing that point if it came from cluster 0 =  0.2703672913694235\n",
+      "probability of observing that point if it came from cluster 1 =  0.0008736750314946848\n",
+      "point =  9.865730196407435\n",
+      "probability of observing that point if it came from cluster 0 =  3.099485417715015e-52\n",
+      "probability of observing that point if it came from cluster 1 =  0.044298188659475116\n",
+      "point =  6.704784293518003\n",
+      "probability of observing that point if it came from cluster 0 =  6.34793933359165e-09\n",
+      "probability of observing that point if it came from cluster 1 =  0.2461341662741961\n",
+      "point =  8.040964332597055\n",
+      "probability of observing that point if it came from cluster 0 =  1.048878303469228e-22\n",
+      "probability of observing that point if it came from cluster 1 =  0.35727158152728333\n",
+      "point =  7.925396538543261\n",
+      "probability of observing that point if it came from cluster 0 =  2.9827560836693873e-21\n",
+      "probability of observing that point if it came from cluster 1 =  0.36862017459035284\n",
+      "point =  8.357918266895211\n",
+      "probability of observing that point if it came from cluster 0 =  6.009059752510742e-27\n",
+      "probability of observing that point if it came from cluster 1 =  0.3082848691080146\n",
+      "point =  6.767963731651916\n",
+      "probability of observing that point if it came from cluster 0 =  1.996571237834018e-09\n",
+      "probability of observing that point if it came from cluster 1 =  0.2597447723003148\n",
+      "point =  5.1797142187059615\n",
+      "probability of observing that point if it came from cluster 0 =  0.2703672913694235\n",
+      "probability of observing that point if it came from cluster 1 =  0.02256344156905975\n",
+      "point =  6.87079372674043\n",
+      "probability of observing that point if it came from cluster 0 =  2.8247426300366285e-10\n",
+      "probability of observing that point if it came from cluster 1 =  0.28135475537908167\n",
+      "6.9274886079749\n",
+      "Probability of coming from C_1 = 7.893060160888283e-11\n",
+      "Probability of coming from C_2 = 0.9999999999210694\n",
+      "\n",
+      "4.010088277285393\n",
+      "Probability of coming from C_1 = 0.9872391926061145\n",
+      "Probability of coming from C_2 = 0.012760807393885507\n",
+      "\n",
+      "9.865730196407435\n",
+      "Probability of coming from C_1 = 1.749216791650946e-51\n",
+      "Probability of coming from C_2 = 1.0\n",
+      "\n",
+      "6.704784293518003\n",
+      "Probability of coming from C_1 = 6.4476413298821965e-09\n",
+      "Probability of coming from C_2 = 0.9999999935523586\n",
+      "\n",
+      "8.040964332597055\n",
+      "Probability of coming from C_1 = 7.339502759955241e-23\n",
+      "Probability of coming from C_2 = 1.0\n",
+      "\n",
+      "7.925396538543261\n",
+      "Probability of coming from C_1 = 2.0229197214884676e-21\n",
+      "Probability of coming from C_2 = 1.0\n",
+      "\n",
+      "8.357918266895211\n",
+      "Probability of coming from C_1 = 4.872976550793133e-27\n",
+      "Probability of coming from C_2 = 1.0\n",
+      "\n",
+      "6.767963731651916\n",
+      "Probability of coming from C_1 = 1.9216664269270208e-09\n",
+      "Probability of coming from C_2 = 0.9999999980783336\n",
+      "\n",
+      "5.1797142187059615\n",
+      "Probability of coming from C_1 = 0.7497268549278113\n",
+      "Probability of coming from C_2 = 0.2502731450721886\n",
+      "\n",
+      "6.87079372674043\n",
+      "Probability of coming from C_1 = 2.509947473183572e-10\n",
+      "Probability of coming from C_2 = 0.9999999997490052\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import norm\n",
     "\n",
@@ -231,9 +304,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(C_1) = 0.17369660562331588,  P(C_2) = 0.8263033943766841\n",
+      "mean_1 = 4.514934068012785,  mean_2 = 7.601149335157923\n",
+      "var_1 = 0.3356114818681837,  var_2 = 1.2243086749384613\n"
+     ]
+    }
+   ],
    "source": [
     "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), sum(prob_c1_x)/ len(prob_c1_x) ]\n",
     "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), sum([x[0] * x[1] for x in zip(prob_c1_x, data)]) / sum(prob_c1_x) ]\n",
@@ -247,20 +330,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "g) Update `P(C_j | X_i)`. Comment on any differences or lack thereof you observe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated P(C_0 | X_i) =  [6.091054671066423e-11, 0.7618500015216632, 1.3498661979404264e-51, 4.975628595148084e-09, 5.663875817246925e-23, 1.5610820603929153e-21, 3.760463746213902e-27, 1.4829451476837694e-09, 0.578562328000558, 1.936920151251657e-10]\n",
+      "Updated P(C_1 | X_i) =  [3.6710921812515243, 0.04684610025384731, 3.671092181541286, 3.6710921578713998, 3.671092181541286, 3.671092181541286, 3.671092181541286, 3.671092174486671, 0.9187757861242596, 3.6710921806198606]\n"
+     ]
+    }
+   ],
    "source": [
     "updated_prob_c0_x = [] \n",
     "updated_prob_c1_x = []  \n",
@@ -279,20 +366,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "h) Use `P(C_j | X_i)` to create a hard assignment - label each point as belonging to a specific cluster (0 or 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hard assignments =  [1, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "hard_assignments = [] \n",
     "\n",
@@ -397,7 +487,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Total Agreements = 3 + 1 + 6 = 10 Total Disagreements = 36 - 10 = 26"
+    "Agreements is 10 \n",
+    "\n",
+    "Total Disagreements is 26"
    ]
   },
   {
@@ -411,8 +503,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use a similar algorithm to what we did above but instead of comparing each pair of points we can just compare the points within each cluster. This will reduce the number of comparisons we have to make in general."
+    "Compare points within the cluster for each clustering method"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
