--- a/lecture_13/worksheet_13.ipynb
+++ b/lecture_13/worksheet_13.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 13\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {
       "image/jpeg": {
        "height": 300,
@@ -58,7 +58,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No"
+   ]
   },
   {
    "attachments": {},
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1.\n",
+      "[1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 1. 1. 1.]\n"
      ]
     }
@@ -114,26 +116,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of the node is  0.48979591836734704\n"
+      "GINI of the node is 0.48979591836734704\n"
      ]
     }
    ],
    "source": [
     "def gini(node):\n",
-    "    frequencies = [\n",
-    "        ...,\n",
-    "        ...\n",
-    "    ]\n",
-    "    return 1 - sum([f**2 for f in frequencies])\n",
+    "    unique, counts = np.unique(node, return_counts=True)\n",
+    "    frequencies = counts / len(node)\n",
+    "    return 1 - sum(f**2 for f in frequencies)\n",
     "\n",
-    "print(\"GINI of the node is \", gini(data[\"heart_disease\"]))"
+    "print(f\"GINI of the node is {gini(data['heart_disease'])}\")"
    ]
   },
   {
@@ -146,29 +146,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of split on thalassemia =  0.13265306122448983\n",
-      "GINI of split on chest_pain =  0.5625\n"
+      "GINI of split on thalassemia = 0.23469387755102045\n",
+      "GINI of split on chest_pain = 0.4419642857142857\n"
      ]
     }
    ],
    "source": [
     "def gini_split(data, attr, target_name):\n",
-    "    ginis = [\n",
-    "        ...,\n",
-    "        ...\n",
-    "    ]\n",
+    "    unique_values = set(data[attr])\n",
+    "    ginis = []\n",
+    "    \n",
+    "    for value in unique_values:\n",
+    "        subset = data[data[attr] == value]\n",
+    "        weight = len(subset) / len(data)\n",
+    "        subset_gini = weight * gini(subset[target_name])\n",
+    "        ginis.append(subset_gini)\n",
+    "    \n",
+    "    return sum(ginis)\n",
     "\n",
-    "    return ...\n",
-    "\n",
-    "print(\"GINI of split on thalassemia = \", gini_split(data, \"thalassemia\", \"heart_disease\"))\n",
-    "print(\"GINI of split on chest_pain = \", gini_split(data, \"chest_pain\", \"heart_disease\"))"
+    "print(f\"GINI of split on thalassemia = {gini_split(data, 'thalassemia', 'heart_disease')}\")\n",
+    "print(f\"GINI of split on chest_pain = {gini_split(data, 'chest_pain', 'heart_disease')}\")"
    ]
   },
   {
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,20 +286,20 @@
    "source": [
     "def predict(tree : Node, example):\n",
     "    if tree.left is None and tree.right is None:\n",
-    "        ...\n",
+    "        return tree.vote\n",
     "    \n",
     "    if example[tree.attr] == 0:\n",
-    "        ...\n",
+    "        return predict(tree.left, example)\n",
     "\n",
     "    if example[tree.attr] == 1:\n",
-    "        ...\n",
+    "        return predict(tree.right, example)\n",
     "\n",
     "    return 0\n",
     "\n",
     "print(predict(tree, {\"A\": 0, \"B\": 1, \"C\": 0})) # A -> B -> right\n",
     "print(predict(tree, {\"A\": 0, \"B\": 0, \"C\": 0})) # A -> B -> left\n",
     "print(predict(tree, {\"A\": 1, \"B\": 1, \"C\": 0})) # A -> C -> left\n",
-    "print(predict(tree, {\"A\": 1, \"B\": 1, \"C\": 1})) # A -> C -> right\n"
+    "print(predict(tree, {\"A\": 1, \"B\": 1, \"C\": 1})) # A -> C -> right"
    ]
   },
   {
@@ -308,16 +312,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thalassemia\n"
+     ]
+    }
+   ],
    "source": [
     "def get_best_attribute(data, target_name):\n",
-    "    best_attr = None\n",
-    "    for attr in data.dtype.names:\n",
-    "        if attr != target_name:\n",
-    "            ...\n",
-    "    return best_attr"
+    "    attributes = [attr for attr in data.dtype.names if attr != target_name]\n",
+    "    scores = {attr: gini_split(data, attr, target_name) for attr in attributes}\n",
+    "    return min(scores, key=scores.get)\n",
+    "\n",
+    "print(get_best_attribute(data, \"heart_disease\"))"
    ]
   },
   {
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,15 +385,27 @@
     "\n",
     "\n",
     "    def gini_split(self, data, attr):\n",
-    "        ...\n",
-    "\n",
+    "        unique_values = set(data[attr])\n",
+    "        total_length = len(data)\n",
+    "        \n",
+    "        ginis = []\n",
+    "        for value in unique_values:\n",
+    "            subset = data[data[attr] == value]\n",
+    "            weight = len(subset) / total_length\n",
+    "            subset_gini = weight * gini(subset[self.target_name])  # Using the standalone gini function\n",
+    "            ginis.append(subset_gini)\n",
+    "        \n",
+    "        return sum(ginis)\n",
     "\n",
     "    def get_majority_vote(self, data):\n",
-    "        ...\n",
+    "        unique_values, counts = np.unique(data[self.target_name], return_counts=True)\n",
+    "        max_index = np.argmax(counts)\n",
+    "        return int(unique_values[max_index])\n",
     "\n",
-    "\n",
-    "    def get_best_attribute(self, data):        \n",
-    "        ...\n",
+    "    def get_best_attribute(self, data):\n",
+    "        attributes = [attr for attr in data.dtype.names if attr != self.target_name]\n",
+    "        scores = {attr: self.gini_split(data, attr) for attr in attributes}\n",
+    "        return min(scores, key=scores.get)\n",
     "\n",
     "\n",
     "    def build_tree(self, data, depth):        \n",
@@ -436,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
