--- a/lecture_14/worksheet_14.ipynb
+++ b/lecture_14/worksheet_14.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 14\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand\n",
+    "\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -41,7 +42,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3/7, 1/3, 3/7, 2/3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +61,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, No, No, Yes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,15 +76,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'TP': 2, 'TN': 4, 'FP': 3, 'FN': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "actual_class = [\"Yes\", \"No\", \"No\", \"Yes\", \"No\", \"No\", \"Yes\", \"No\", \"No\", \"No\"]\n",
     "predicted_class = [\"Yes\", \"No\", \"Yes\", \"No\", \"No\", \"No\", \"Yes\", \"Yes\", \"Yes\", \"No\"]\n",
     "\n",
     "def confusion_matrix(actual, predicted):\n",
-    "    return\n",
+    "    TP, TN, FP, FN = 0, 0, 0, 0\n",
+    "    for a, p in zip(actual, predicted):\n",
+    "        if a == p == \"Yes\":\n",
+    "            TP += 1\n",
+    "        elif a == p == \"No\":\n",
+    "            TN += 1\n",
+    "        elif a == \"Yes\" and p == \"No\":\n",
+    "            FN += 1\n",
+    "        elif a == \"No\" and p == \"Yes\":\n",
+    "            FP += 1\n",
+    "            \n",
+    "    return {\"TP\": TP, \"TN\": TN, \"FP\": FP, \"FN\": FN}\n",
     "\n",
     "print(confusion_matrix(actual_class, predicted_class))"
    ]
@@ -101,7 +125,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(2 * (-1)) + (3 * 0) + (3 * 10) + (1 * 5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +138,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "def classification_cost(actual, predicted, cost_matrix):\n",
+    "    TP, TN, FP, FN = 0, 0, 0, 0\n",
+    "    for a, p in zip(actual, predicted):\n",
+    "        if a == p == \"Yes\":\n",
+    "            TP += 1\n",
+    "        elif a == p == \"No\":\n",
+    "            TN += 1\n",
+    "        elif a == \"Yes\" and p == \"No\":\n",
+    "            FN += 1\n",
+    "        elif a == \"No\" and p == \"Yes\":\n",
+    "            FP += 1\n",
+    "            \n",
+    "    total_cost = (TP * cost_matrix['Y']['Y']) + \\\n",
+    "                 (TN * cost_matrix['N']['N']) + \\\n",
+    "                 (FP * cost_matrix['N']['Y']) + \\\n",
+    "                 (FN * cost_matrix['Y']['N'])\n",
+    "    \n",
+    "    return total_cost\n",
+    "\n",
+    "cost_matrix = {\n",
+    "    'Y': {'Y': -1, 'N': 5},\n",
+    "    'N': {'Y': 10, 'N': 0}\n",
+    "}\n",
+    "\n",
+    "print(classification_cost(actual_class, predicted_class, cost_matrix))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +193,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.6\n",
+      "precision: 0.4\n",
+      "recall: 0.6666666666666666\n",
+      "f-measure: 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def confusion_metrics(actual, predicted):\n",
+    "    TP, TN, FP, FN = 0, 0, 0, 0\n",
+    "    for a, p in zip(actual, predicted):\n",
+    "        if a == p == \"Yes\":\n",
+    "            TP += 1\n",
+    "        elif a == p == \"No\":\n",
+    "            TN += 1\n",
+    "        elif a == \"Yes\" and p == \"No\":\n",
+    "            FN += 1\n",
+    "        elif a == \"No\" and p == \"Yes\":\n",
+    "            FP += 1\n",
+    "    return TP, TN, FP, FN\n",
+    "\n",
+    "def accuracy(actual, predicted):\n",
+    "    TP, TN, FP, FN = confusion_metrics(actual, predicted)\n",
+    "    return (TP + TN) / (TP + TN + FP + FN)\n",
+    "\n",
+    "def precision(actual, predicted):\n",
+    "    TP, _, FP, _ = confusion_metrics(actual, predicted)\n",
+    "    return TP / (TP + FP)\n",
+    "\n",
+    "def recall(actual, predicted):\n",
+    "    TP, _, _, FN = confusion_metrics(actual, predicted)\n",
+    "    return TP / (TP + FN)\n",
+    "\n",
+    "def f_measure(actual, predicted):\n",
+    "    p = precision(actual, predicted)\n",
+    "    r = recall(actual, predicted)\n",
+    "    return 2 * (p * r) / (p + r)\n",
+    "\n",
+    "print(\"accuracy:\", accuracy(actual_class, predicted_class))\n",
+    "print(\"precision:\", precision(actual_class, predicted_class))\n",
+    "print(\"recall:\", recall(actual_class, predicted_class))\n",
+    "print(\"f-measure:\", f_measure(actual_class, predicted_class))"
+   ]
   }
  ],
  "metadata": {
@@ -146,8 +252,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
