--- a/lecture_15/worksheet_15.ipynb
+++ b/lecture_15/worksheet_15.ipynb
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Closer together - narrow margin, farther apart - "
+    "Closer together - narrow margin, farther apart - wider margin"
    ]
   },
   {
