--- a/lecture_22/worksheet_22.ipynb
+++ b/lecture_22/worksheet_22.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 22\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand \n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -505,11 +505,6 @@
     "\n",
     "d) Describe how you would check that the normality assumption holds in the dataset you were given?"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "attachments": {},
