--- a/lecture_24/worksheet_24.ipynb
+++ b/lecture_24/worksheet_24.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 24\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand\n",
+    "\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -51,13 +52,29 @@
     "    Y = np.array([1 if m.cos(4*x[0]) - x[1] >= 0 else 0 for x in X])\n",
     "    return X, Y\n",
     "\n",
-    "# The model - modify this\n",
+    "# # The modified model\n",
+    "# model = keras.models.Sequential()\n",
+    "# model.add(layers.Dense(10, input_dim=2, activation=\"relu\"))  # increased neurons and changed to ReLU\n",
+    "# model.add(layers.Dense(10, activation=\"relu\"))  # additional hidden layer\n",
+    "# model.add(layers.Dense(1, activation=\"sigmoid\"))  # output layer remains the same\n",
+    "# model.compile(loss=\"binary_crossentropy\", optimizer='adam')  # changed optimizer to 'adam'\n",
+    "\n",
+    "from tensorflow.keras.regularizers import l2\n",
+    "# The modified model with regularization\n",
     "model = keras.models.Sequential()\n",
-    "model.add(layers.Dense(3, input_dim=2, activation=\"sigmoid\"))\n",
+    "model.add(layers.Dense(10, input_dim=2, activation=\"relu\", kernel_regularizer=l2(0.01)))\n",
+    "model.add(layers.Dense(10, activation=\"relu\", kernel_regularizer=l2(0.01)))\n",
+    "model.add(layers.Dropout(0.5))  # Adding dropout for regularization\n",
     "model.add(layers.Dense(1, activation=\"sigmoid\"))\n",
-    "model.compile(loss=\"binary_crossentropy\")\n",
+    "model.compile(loss=\"binary_crossentropy\", optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "# Fit the model with early stopping\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "X, Y = generate_curve_data(t)\n",
+    "\n",
+    "history = model.fit(X, Y, batch_size=50, epochs=200, validation_split=0.2, callbacks=[early_stopping])\n",
     "\n",
     "# plot the data\n",
     "plt.scatter(X[:,0],X[:,1],color=colors[Y].tolist(), s=100, alpha=.9)\n",
@@ -96,8 +113,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
